# spauq

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  acf.py  codecov.yml  main.py  setup.cfg  test.csv
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: workflow.yml
.old/: Untitled.ipynb  main.py
.old/data/: dataloader.py  dataset.py  room.py
.old/eval/: decomposition.py
.old/new-sandbox/: acf.ipynb  delay_both_new.ipynb  sandbox.ipynb
.old/sandbox/: Untitled.ipynb  bandstop.ipynb  delay_both_new.ipynb  delay_estim_new.ipynb  delay_lrestim.ipynb  delay_on_both.ipynb  highpass.ipynb  ideal.ipynb
data/: dataloader.py  dataset.py  musdb.py  room.py  timit.py  transform.py
docs/: conf.py  index.rst  requirements.txt
eval/: decomposition.py
expt/: bsu.py
expt/codec/: aac.ipynb  codec.py  evaluate.py  mp3.ipynb  opus.ipynb  results.ipynb
expt/degradation/: delaypan.ipynb  evaluate.py  lpfpan.ipynb  noisepan.ipynb  pan.ipynb  spatial.py
expt/music-source-seperation/: demucs.csv  evaluate.py  inference.py  results.ipynb  utils.py
expt/starss/: mono2foa.py  run.py  starss.ipynb  starss22.npz
oldresults/20221025234705/: results-incomplete.csv
oldresults/20221103121054/: results-ok.csv
oldresults/20221103121314/: results-incomplete.csv
oldresults/20221103121624/: results-incomplete.csv
oldresults/20221103122135/: results-incomplete.csv
oldresults/20221103124108/: results-incomplete.csv
oldresults/20221103124356/: results-incomplete.csv
oldresults/20221103124436/: results-incomplete.csv
oldresults/20221103124557/: results-incomplete.csv
oldresults/20221103132429/: results-incomplete.csv
oldresults/20221103133059/: results-incomplete.csv
oldresults/20221107043944/: results-incomplete.csv
oldresults/20221107043954/: args.json  results-incomplete.csv
oldresults/20221107044049/: results-incomplete.csv
oldresults/20221107044052/: results-incomplete.csv
oldresults/20221107044152/: results-incomplete.csv
oldresults/20221107044229/: results-incomplete.csv
oldresults/20221107044352/: results-incomplete.csv
oldresults/20221107045002/: results-incomplete.csv
oldresults/20221107045034/: results-incomplete.csv
oldresults/20221107045108/: results-incomplete.csv
oldresults/20221107045131/: results-incomplete.csv
sandbox/: bandstop.ipynb  delay_estim_new.ipynb  delay_on_estim.ipynb  highpass.ipynb  lowpass.ipynb
tests/: test_dummy.py
(+4262 files in other folders)
