[metadata]
name = spauq
version = 0.0.1-alpha
description = SPAUQ
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karnwatcharasupat/spauq
author = Karn Watcharasupat
author_email = kwatcharasupat@gatech.edu
license = GPLv3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/karnwatcharasupat/spauq/issues

[options]
packages = find:
install_requires =
    numpy>=1.18
    scikit-learn>=1.0
    fire
    soundfile>=0.8
    tqdm
python_requires = >=3.8, <3.11
package_dir =
    = src

[options.entry_points]
console_scripts =
    spauq-eval-file = spauq.wrapper.cli:fire_spauq_eval_file
    spauq-eval-dir = spauq.wrapper.cli:fire_spauq_eval_dir

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-xdist

bsseval =
    museval>=0.4.0
    fast-bss-eval>=0.1.4

